Fix overflow of box headers into sidebar

--- a/assets/_scss/blockquote.scss
+++ b/assets/_scss/blockquote.scss
@@ -7,6 +7,8 @@ $codeblock-padding: 5px !default;
   $gradientcolor1: $color;
   $gradientcolor2: scale-color($color, $lightness: 10%);
 
+  display: flow-root; // Fix for float overlap
+
   padding-left: $codeblock-padding;
   padding-top: 0;
   padding-bottom: 0;
